# learningBack

./: .env.example  .gitignore  Dockerfile  Readme.md  alembic.ini  pyproject.toml
core/: __init__.py  app.py  config.py  db.py  deps.py  jobs.py  models.py  schemas.py  security.py  srs.py
core/ai_gateway/: __init__.py  base.py  claude.py  mock.py
core/routers/: __init__.py  auth.py  content.py  jobs.py  sync.py
migrations/: env.py
migrations/versions/: 0001_init.py  0002_auth.py
modules/: __init__.py
modules/languages/: __init__.py  generators.py  rubrics.py
modules/ml/: __init__.py  generators.py  rubrics.py
scripts/: seed.py
